--- a/.github/workflows/build-Immortalwrt-N1.yml
+++ b/.github/workflows/build-Immortalwrt-N1.yml
@@ -22,6 +22,7 @@ on:
         default: 'false'
   schedule:
     - cron: 0 0 */3 * *
+      timezone: Asia/Shanghai
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
