--- a/.github/workflows/build-LEDE-X86.yml
+++ b/.github/workflows/build-LEDE-X86.yml
@@ -50,6 +50,7 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+          chmod +x $FREE_DISK_SH && $FREE_DISK_SH
           docker rmi `docker images -q`
           sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc /etc/mysql /etc/php
           sudo -E apt-get -y purge azure-cli* docker* ghc* zulu* hhvm* llvm* firefox* google* dotnet* aspnetcore* powershell* openjdk* adoptopenjdk* mysql* php* mongodb* moby* snap* || true
